Start chat and get chats
